--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a
                 href="https://github.com/mkkellogg/GaussianSplats3D"
                 target="_blank"
-                ><em>Gaussian Splat</em> viewer by mkkellog</a
+                >Gaussian-Splat-Viewer by <em>mkkellog</em></a
               >. Example splats made with
               <a href="https://poly.cam/" target="_blank">Polycam</a> and
               <a href="https://www.jawset.com/" target="_blank">Postshot</a>.
