add scribble title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon-prototype.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Splat Komputer</title>
+    <title>splat komputer</title>
   </head>
   <body>
     <div id="sketch-guide">
@@ -17,7 +17,7 @@
       <div class="side-panels">
         <div id="info-panel">
           <div class="title">
-            <h1>Toolbox Demo</h1>
+            <h1>splat komputer</h1>
             <img src="/title.webp" alt="" />
           </div>
           <div id="credits">
